--- a/Javascript/package.json
+++ b/Javascript/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "fs": "^0.0.1-security",
+    "moment": "^2.29.4",
     "puppeteer": "^21.4.1"
   }
 }
