Modification structure json Up To Date

--- a/Javascript/Resultat_Recherche/Appartager_Recherche/Data_Appartager_Recherche_2023-10-31.json
+++ b/Javascript/Resultat_Recherche/Appartager_Recherche/Data_Appartager_Recherche_2023-10-31.json
@@ -28,18 +28,18 @@
     "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002767334&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D0%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
-    "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001436183.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
-    "rent": "€500 - €600",
+    "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001167039.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
+    "rent": "€635",
     "rentFrequency": "par mois",
-    "photoCount": "5",
-    "location": "Le Plessis-Robinson (92350 Le Plessis-Robinson)",
+    "photoCount": "8",
+    "location": "Montigny-le-Bretonneux (78180 Montigny-le-Bretonneux)",
     "membership": "Membre Basique",
     "highlight": "Nouvelle annonce aujourd'hui",
-    "availability": "Disponible maintenant",
-    "roomType": "2 simples",
-    "title": "Colocation Le Plessis Robinson",
-    "description": "Disponible immédiatement\nNous vous proposons une chambre en colocation dans un appartement situé au 3ème étage avec une cave.\nLe bien est situé...",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002767346&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D0%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+    "availability": "Disponible le 1 déc.",
+    "roomType": "Chambre simple",
+    "title": "1 Chambres Dispo Estaca, Gare, Fac à Pied",
+    "description": "Colocation TOUT INCLUS ★ 1 chambre dispo début décembre ★ Appartement entièrement rénové et meublé à neuf ★situé à Montigny Le...",
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002514978&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D0%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001436063.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
@@ -54,6 +54,20 @@
     "title": "50 Beregovoy - Chambre 3 (PRS)",
     "description": "English Version below\n\n🏡\nColoc de 3 chambres - Appartement de 76m² avec balcon partagé\nChambre lumineuse et moderne de 10m² tout...",
     "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002767327&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D0%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+  },
+  {
+    "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001436183.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
+    "rent": "€500 - €600",
+    "rentFrequency": "par mois",
+    "photoCount": "5",
+    "location": "Le Plessis-Robinson (92350 Le Plessis-Robinson)",
+    "membership": "Membre Basique",
+    "highlight": "Nouvelle annonce aujourd'hui",
+    "availability": "Disponible maintenant",
+    "roomType": "2 simples",
+    "title": "Colocation Le Plessis Robinson",
+    "description": "Disponible immédiatement\nNous vous proposons une chambre en colocation dans un appartement situé au 3ème étage avec une cave.\nLe bien est situé...",
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002767346&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D0%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001436130.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
@@ -137,7 +151,7 @@
     "roomType": "Chambre double",
     "title": "Superbe Appartement Dans Le 11èMe",
     "description": "colocation agréable et enrichissante \nj'ai 33 ans et un enfant de 12ans nous sommes très indépendants tous les deux \nvous êtes la bienvenue ...",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002766114&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D0%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002766114&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D10%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001393719.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
@@ -277,13 +291,13 @@
     "roomType": "Chambre simple",
     "title": "1 room to rent in a house  (10,50 m2)",
     "description": "PAY ATTENTION : the room will be available from January 4, 2024 !\n\nI rent a nice bedroom of 10,50m² in my house in which I live (I am 56 years old...",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002655480&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D10%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002655480&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D20%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
-    "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001291859.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
+    "imageUrl": "",
     "rent": "€450",
     "rentFrequency": "par mois",
-    "photoCount": "9",
+    "photoCount": "",
     "location": "Bondy (93140 Bondy)",
     "membership": "Membre Premium",
     "highlight": "Nouvelle annonce",
@@ -417,7 +431,7 @@
     "roomType": "Chambre double",
     "title": "38 Allende 7- Chambre 2 (PRS)",
     "description": "English Version below\n\n🏡\nColoc de 4 chambres - Appartement de 83m² avec balcon partagé\nChambre lumineuse et moderne de 9m² tout...",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002767328&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D20%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002767328&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D30%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/00/3000997787.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
@@ -557,7 +571,7 @@
     "roomType": "2 simples",
     "title": "Très bel appt 2/3 pièces proche Gare du Nord",
     "description": "Bienvenue dans cet appartement 2/3 pièces tout confort de 31 m², idéal pour un binôme de colocataires se connaissant, libre d'accès le lundi 20...",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3000997666&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D30%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3000997666&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D40%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001434570.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
@@ -697,7 +711,7 @@
     "roomType": "Chambre simple",
     "title": "Loue chambre  meublée près Parc Montsouris",
     "description": "Libre  Octobre  2023 à 500 € / mois . charges comprises .\nChambre à Paris 75014, parc Montsouris . Métro : Glacière , Alésia . Bus 21 , 62 ....",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3001624940&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D40%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3001624940&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D50%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "",
@@ -837,7 +851,7 @@
     "roomType": "2 simples",
     "title": "Calme Et Responsable",
     "description": "Pantin the gate of Paris.\nGood morning  .  This rental is more suitable for a young student who likes peace and quiet and prefers to be alone most of...",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3001027510&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D50%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3001027510&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D60%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001021408.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
@@ -977,7 +991,7 @@
     "roomType": "Chambre double",
     "title": "Chambre à louer dans 5 pièces",
     "description": "Dans copropriété paysagée, à louer chambre de 12 m2 dans appartement de 98 m2 pour étudiant ou salarié. \nA 10 minutes à pieds du RER D station...",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002353217&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D60%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002353217&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D70%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001206830.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
@@ -1104,20 +1118,6 @@
     "title": "Proposition colocation",
     "description": "Bonjour à tous,\n\nJe propose une colocation sur Courbevoie ( quartier Bécon les bruyères )\n\nÀ 5 minutes du quartier de La Défense et dix...",
     "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002751772&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D70%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
-  },
-  {
-    "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001336616.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
-    "rent": "€575",
-    "rentFrequency": "par mois",
-    "photoCount": "7",
-    "location": "Évry-Courcouronnes (91000 Évry-Courcouronnes)",
-    "membership": "Membre Basique",
-    "highlight": "Nouvelle annonce",
-    "availability": "Disponible maintenant",
-    "roomType": "3 doubles",
-    "title": "Superbe Colocation Evry",
-    "description": "Superbe appartement T4/T5 tout équipé meublé de 87 m² avec 2 balcons, rénové avec goût et très lumineux disponible immédiatement pour 4...",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002643380&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D70%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001336616.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
