--- a/Javascript/Resultat_Recherche/Up_To_Date_Recherche/Appartager_Recherche_Up_To_Date/Updated_Data_Appartager_Recherche_2023-10-31.json
+++ b/Javascript/Resultat_Recherche/Up_To_Date_Recherche/Appartager_Recherche_Up_To_Date/Updated_Data_Appartager_Recherche_2023-10-31.json
@@ -1120,6 +1120,20 @@
     "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002751772&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D70%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
+    "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001366843.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
+    "rent": "€600",
+    "rentFrequency": "par mois",
+    "photoCount": "9",
+    "location": "Courbevoie (92400 Courbevoie)",
+    "membership": "Membre Basique",
+    "highlight": "Nouvelle annonce",
+    "availability": "Disponible le 1 déc.",
+    "roomType": "Chambre double",
+    "title": "Proposition colocation",
+    "description": "Bonjour à tous,\n\nJe propose une colocation sur Courbevoie ( quartier Bécon les bruyères )\n\nÀ 5 minutes du quartier de La Défense et dix...",
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002751772&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D80%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+  },
+  {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001336616.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
     "rent": "€575",
     "rentFrequency": "par mois",
@@ -1257,7 +1271,7 @@
     "roomType": "Chambre simple",
     "title": "Chambres  a Louer",
     "description": "Chambres refait a neuf proche de parc de sceaux, face jardin, 2eme étage avec d'ascenseur, calme, moderne, commerces et transports en commun au pieds...",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002556256&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D80%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002556256&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D90%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "",
@@ -1397,7 +1411,7 @@
     "roomType": "Chambre double",
     "title": "Chambre meublée tout confort",
     "description": "Une chambre meublée avec tout le confort  nécessaire dans un immeuble neuf.\nDeux salle de bain et deux WC. Grand séjour.  \nLocal vélo disponible...",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002443690&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D90%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002443690&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D100%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001435585.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
@@ -1537,7 +1551,7 @@
     "roomType": "Chambre double",
     "title": "Colocation meublée à Torcy",
     "description": "Torcy - Rue Pierre Mendès France - Bel appartement entièrement refait à neuf offrant: une entrée, une grande cuisine aménagée/ équipée, 1...",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002760381&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D100%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002760381&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D110%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001420281.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
@@ -1677,7 +1691,7 @@
     "roomType": "Chambre double",
     "title": "Chambre de 10m2 non-meublée dans une coloc XVeme",
     "description": "Salut à tous,\n🏠1 chambre se libère dans notre coloc à Paris !\n Appartement de 77m2, très lumineux, 3 chambres et un grand espace commun salle...",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002767205&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D110%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002767205&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D120%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001273639.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
@@ -1817,7 +1831,7 @@
     "roomType": "Chambre simple",
     "title": "Colocation Sympa",
     "description": "Bonjour , \n\n Je vous propose une colocation dans un charmant appartement  de 30m² au coeur du centre ville de Palaiseau, a 5 minutes du RER B et C,...",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002436403&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D120%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002436403&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D130%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001435222.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
@@ -1957,7 +1971,7 @@
     "roomType": "Chambre double",
     "title": "Chambre Luxueuse",
     "description": "SUPERBE CHAMBRE a coté des commerces 5 minutes de la gare et bus au pied de l'appartement situé au calme a 5 minutes du parc de la vallée tout...",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002392715&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D130%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002392715&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D140%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001431862.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
@@ -2097,7 +2111,7 @@
     "roomType": "6 chambres house",
     "title": "Colocation étudiant - 40 min gare de lyon",
     "description": "Nous proposons de partager une colocation de 6 étudiant(e)s dans un pavillon de 170 m2 refait à neuf (bail mobilité/étudiant).\n\nTrain direct...",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002751585&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D140%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002751585&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D150%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001428276.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
@@ -2237,7 +2251,7 @@
     "roomType": "Chambre simple",
     "title": "Chambre Pour Etudientte",
     "description": "Je loue une chambre pour famme  étudient au Les Lilas 5 minut metro , zone paviliener , limite Paris.",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002757668&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D150%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002757668&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D160%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001313692.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
@@ -2377,7 +2391,7 @@
     "roomType": "Chambre simple",
     "title": "Chambre meublée",
     "description": "Bonjour,\n\nJe ne réponds pas aux messages sans photo et si vous ne parlez pas  du tout français, ce ne sera pas facile pour échanger. Je m'en...",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002684622&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D160%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
+    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002684622&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D170%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001434942.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
@@ -2504,20 +2518,6 @@
     "title": "Chambre proche métro Villejuif louis Aragon",
     "description": "Jolie chambre de 10 m2 dans un petit pavillon en fond de jardin très calme sur le plateau de Vitry/seine avec fenêtre sur courette exposée est....",
     "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3002758006&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D170%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
-  },
-  {
-    "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/00/3000757599.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
-    "rent": "€800",
-    "rentFrequency": "par mois",
-    "photoCount": "5",
-    "location": "Paris 9e Arrondissement (75009 Paris)",
-    "membership": "Membre Basique",
-    "highlight": "",
-    "availability": "Disponible le 1 nov.",
-    "roomType": "Chambre double",
-    "title": "Bel appartement",
-    "description": "Bel appartement, au 6eme étage, ensoleillé toute la journée. Équipé de A à Z. Très bien agencé",
-    "link": "https://www.appartager.com/location/colocation.pl?flatshare_id=3000004983&search_id=3000001176473&city_id=1000&flatshare_type=offered&search_results=%2Flocation%2F%3Foffset%3D170%26search_id%3D3000001176473%26sort_by%3Dby_day%26mode%3Dlist&"
   },
   {
     "imageUrl": "https://photos.spareroom.fr/images/flatshare/listings/unmodified/30/01/3001191549.jpg?width=800&height=800&fit=bounds&auto=webp&optimize=medium",
