--- a/Javascript/package.json
+++ b/Javascript/package.json
@@ -4,6 +4,8 @@
     "fs": "^0.0.1-security",
     "moment": "^2.29.4",
     "playwright": "^1.40.1",
-    "puppeteer": "^21.4.1"
+    "puppeteer": "^21.4.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
